[gd_scene load_steps=6 format=2]

[ext_resource path="res://Unit.tscn" type="PackedScene" id=1]
[ext_resource path="res://Link.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 6.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 6 )

[sub_resource type="CircleShape2D" id=3]
radius = 6.0

[node name="Link" instance=ExtResource( 1 )]
script = ExtResource( 2 )
speed = 64.0

[node name="AnimatedSprite" parent="." index="0"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="SwordCollision" type="Area2D" parent="." index="2"]
position = Vector2( -1, -1 )
collision_layer = 4
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordCollision" index="0"]
position = Vector2( 1, 14 )
shape = SubResource( 1 )
disabled = true

[node name="HitBox" parent="." index="3"]
collision_layer = 0
collision_mask = 8
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="RespawnTimer" type="Timer" parent="." index="4"]
one_shot = true

[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
